2005-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): reset stored
	path to "" if it doesn't exist and -mustexist is true. [Bug 1309218]
	Remove old-style dir chooser (no longer used).
	
	* macosx/tkMacOSXInt.h: add MODULE_SCOPE definition check for
	extension writers that access private headers on OS X and don't
	define it in configure.

2005-09-28  Don Porter	<dgp@users.sourceforge.net>

	* unix/tkUnixPort.h:	Disabled inclusion of the private Tcl header
	* win/tkWinPort.h:	file tclInt.h.  Tk ought to have a tiny and
	shrinking number of calls of private Tcl routines.  Each Tk source
	file doing this should follow the convention in the macosx port and
	have its own #include "tclInt.h".

	* generic/tkEvent.c:	Disabled calls to private Tcl routine
	TclInExit().  See comment in TkCreateExitHandler() for full rationale.

2005-09-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkEvent.c (TkCreateThreadExitHandler, TkFinalizeThread)
	(TkDeleteThreadExitHandler): New internal API (from Joe Mistachkin)
	to allow Tk to finalize itself correctly in a multi-threaded
	environment. [Bug 749908]

2005-09-14  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkOldConfig.c (GetCachedSpecs): Split out the code to
	manipulate the cached writable specs so that it can be reused from
	all the public Tk_Configure* functions.
	(Tk_ConfigureInfo, Tk_ConfigureWidget, Tk_ConfigureValue): Use the
	factored out code everywhere, so we always manipulate the cache
	correctly. [Bug 1288128]

2005-09-13  Don Porter	<dgp@users.sourceforge.net>

	* win/winMain.c (WishPanic):	Replaced TCL_VARARGS* macros with
	direct use of stdarg.h conventions.

2005-09-11  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): check if
	process is in front on MouseDown, otherwise request process activation
	from BringWindowForward() via new isFrontProcess param.
